# Phoma

./: Cargo.toml  hide_virtual_keyboard.sh  show_virtual_keyboard.sh
src/: .#id_map_data.rs  background.rs  main.rs  rd_map_data.rs  virtual_keyboard.rs
ui/: app-window.slint
