[package]
name = "virtual_keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.4.0"
futures-util = "0.3.31"
# dbus = "0.9.7"
# slint = "1.8.0"
tokio = { version = "1.45.0", features = ["full"]}
zbus = "5.7.0"

[build-dependencies]
slint-build = "1.8.0"
